修复首页布局：移除紫色渐变背景，将长描述文字移到页面底部，解决颜色协调问题

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -464,18 +464,7 @@
     </section>
 
     <!-- AISTONE 详细介绍部分 -->
-    <section class="aistone-intro" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); padding: 40px 0; margin: 20px 0;">
-        <div class="container">
-            <div style="text-align: center; color: white; max-width: 800px; margin: 0 auto; margin-bottom: 30px;">
-                <div class="hero-intro" data-i18n="heroIntro" style="max-width:700px;margin:0 auto;text-align:center;color:#e0e6f0;font-size:1.1em;line-height:1.7;">
-                  AISTONE 是一个集AI图片生成与语音合成于一体的智能创作平台，支持中英文输入，永久免费，无需注册。无论你是设计师、内容创作者还是普通用户，只需一句描述，即可一键生成高质量图片和自然语音，释放无限创意。平台注重隐私保护，所有内容实时生成不留存，助力每一位用户高效创作、自由分享。
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- AISTONE 详细介绍部分 -->
-    <section class="aistone-intro" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); padding: 40px 0; margin: 20px 0;">
+    <section class="aistone-intro" style="background: #232837; padding: 40px 0; margin: 20px 0;">
         <div class="container">
             <div style="text-align: center; color: white; max-width: 800px; margin: 0 auto;">
                 <h2 style="font-size: 2.5em; margin-bottom: 20px; font-weight: bold;">Welcome to AISTONE</h2>
@@ -773,6 +762,17 @@
                         <p style="font-size: 1.1em; line-height: 1.8; color: #e0e6f6;">
                             Join thousands of users who trust <strong>AISTONE</strong> for their AI content creation needs. From stunning visual art to natural voice synthesis, <strong>AISTONE</strong> is your one-stop solution for all AI-powered creative projects. Experience the future of content creation with <strong>AISTONE</strong> today.
                         </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
+        <!-- AISTONE 详细描述文字 -->
+        <section class="aistone-description" style="background: #1a1f2e; padding: 40px 0; margin: 20px 0;">
+            <div class="container">
+                <div style="text-align: center; color: #aab4d4; max-width: 800px; margin: 0 auto;">
+                    <div class="hero-intro" data-i18n="heroIntro" style="max-width:700px;margin:0 auto;text-align:center;font-size:1.1em;line-height:1.7;">
+                      AISTONE 是一个集AI图片生成与语音合成于一体的智能创作平台，支持中英文输入，永久免费，无需注册。无论你是设计师、内容创作者还是普通用户，只需一句描述，即可一键生成高质量图片和自然语音，释放无限创意。平台注重隐私保护，所有内容实时生成不留存，助力每一位用户高效创作、自由分享。
                     </div>
                 </div>
             </div>
