完善中英文切换：为Welcome to AISTONE和About AISTONE部分添加完整的i18n支持

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -603,22 +603,22 @@
         <section class="aistone-intro" style="background: #1a1f2e; padding: 40px 0; margin: 20px 0;">
             <div class="container">
                 <div style="text-align: center; color: white; max-width: 800px; margin: 0 auto;">
-                    <h2 style="font-size: 2.5em; margin-bottom: 20px; font-weight: bold;">Welcome to AISTONE</h2>
-                    <p style="font-size: 1.2em; line-height: 1.8; margin-bottom: 20px;">
-                        <strong>AISTONE</strong> is your premier destination for AI-powered image generation and voice synthesis. As a leading AI content creation platform, <strong>AISTONE</strong> combines cutting-edge technology with user-friendly design to deliver exceptional results.
+                    <h2 style="font-size: 2.5em; margin-bottom: 20px; font-weight: bold;" data-i18n="welcomeToAistone">欢迎使用 AISTONE</h2>
+                    <p style="font-size: 1.2em; line-height: 1.8; margin-bottom: 20px;" data-i18n="aistoneIntro">
+                        <strong>AISTONE</strong> 是您进行AI图片生成与语音合成的首选平台。作为领先的AI内容创作平台，<strong>AISTONE</strong> 结合前沿技术与用户友好设计，为您提供卓越的创作体验。
                     </p>
                     <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; margin-top: 30px;">
                         <div style="background: rgba(255,255,255,0.1); padding: 20px; border-radius: 10px;">
-                            <h3 style="color: #00CFFF; margin-bottom: 10px;">AISTONE AI Image Generator</h3>
-                            <p>Experience the power of <strong>AISTONE's</strong> advanced AI models including GPT Image, FLUX, and DeepSeek for stunning visual creation.</p>
+                            <h3 style="color: #00CFFF; margin-bottom: 10px;" data-i18n="aistoneImageGenerator">AISTONE AI 图片生成器</h3>
+                            <p data-i18n="aistoneImageDesc">体验 <strong>AISTONE</strong> 先进AI模型的强大功能，包括GPT Image、FLUX和DeepSeek，为您创造令人惊叹的视觉作品。</p>
                         </div>
                         <div style="background: rgba(255,255,255,0.1); padding: 20px; border-radius: 10px;">
-                            <h3 style="color: #00CFFF; margin-bottom: 10px;">AISTONE Voice Synthesis</h3>
-                            <p>Transform text into natural speech with <strong>AISTONE's</strong> state-of-the-art voice synthesis technology.</p>
+                            <h3 style="color: #00CFFF; margin-bottom: 10px;" data-i18n="aistoneVoiceSynthesis">AISTONE 语音合成</h3>
+                            <p data-i18n="aistoneVoiceDesc">使用 <strong>AISTONE</strong> 最先进的语音合成技术，将文本转换为自然语音。</p>
                         </div>
                         <div style="background: rgba(255,255,255,0.1); padding: 20px; border-radius: 10px;">
-                            <h3 style="color: #00CFFF; margin-bottom: 10px;">AISTONE Free Platform</h3>
-                            <p>Enjoy <strong>AISTONE's</strong> complete feature set completely free - no registration, no limits, no hidden costs.</p>
+                            <h3 style="color: #00CFFF; margin-bottom: 10px;" data-i18n="aistoneFreePlatform">AISTONE 免费平台</h3>
+                            <p data-i18n="aistoneFreeDesc">享受 <strong>AISTONE</strong> 完整功能集，完全免费 - 无需注册，无限制，无隐藏费用。</p>
                         </div>
                     </div>
                 </div>
@@ -738,31 +738,31 @@
         <section class="aistone-brand" style="background: #1a1f2e; padding: 60px 0; margin: 40px 0;">
             <div class="container">
                 <div style="text-align: center; color: white; max-width: 1000px; margin: 0 auto;">
-                    <h2 style="font-size: 3em; margin-bottom: 30px; font-weight: bold; background: linear-gradient(45deg, #00CFFF, #667eea); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">About AISTONE</h2>
+                    <h2 style="font-size: 3em; margin-bottom: 30px; font-weight: bold; background: linear-gradient(45deg, #00CFFF, #667eea); -webkit-background-clip: text; -webkit-text-fill-color: transparent;" data-i18n="aboutAistone">关于 AISTONE</h2>
                     <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px; margin-top: 40px;">
                         <div style="background: #262b35; padding: 30px; border-radius: 15px; border-left: 4px solid #00CFFF;">
-                            <h3 style="color: #00CFFF; margin-bottom: 15px; font-size: 1.5em;">What is AISTONE?</h3>
-                            <p style="line-height: 1.8; color: #e0e6f6;">
-                                <strong>AISTONE</strong> is a revolutionary AI-powered platform that combines cutting-edge image generation and voice synthesis technologies. Founded with the vision of democratizing AI content creation, <strong>AISTONE</strong> provides free access to advanced AI models including GPT Image, FLUX, and DeepSeek.
+                            <h3 style="color: #00CFFF; margin-bottom: 15px; font-size: 1.5em;" data-i18n="whatIsAistone">什么是 AISTONE？</h3>
+                            <p style="line-height: 1.8; color: #e0e6f6;" data-i18n="whatIsAistoneDesc">
+                                <strong>AISTONE</strong> 是一个革命性的AI驱动平台，结合了前沿的图片生成和语音合成技术。以民主化AI内容创作为愿景，<strong>AISTONE</strong> 提供对包括GPT Image、FLUX和DeepSeek在内的先进AI模型的免费访问。
                             </p>
                         </div>
                         <div style="background: #262b35; padding: 30px; border-radius: 15px; border-left: 4px solid #00CFFF;">
-                            <h3 style="color: #00CFFF; margin-bottom: 15px; font-size: 1.5em;">AISTONE's Mission</h3>
-                            <p style="line-height: 1.8; color: #e0e6f6;">
-                                <strong>AISTONE</strong> is committed to making AI content creation accessible to everyone. Whether you're a professional designer, content creator, or just someone with creative ideas, <strong>AISTONE</strong> provides the tools you need to bring your vision to life without any barriers.
+                            <h3 style="color: #00CFFF; margin-bottom: 15px; font-size: 1.5em;" data-i18n="aistoneMission">AISTONE 的使命</h3>
+                            <p style="line-height: 1.8; color: #e0e6f6;" data-i18n="aistoneMissionDesc">
+                                <strong>AISTONE</strong> 致力于让AI内容创作对每个人都能触手可及。无论您是专业设计师、内容创作者，还是只是有创意想法的人，<strong>AISTONE</strong> 都提供您需要的工具，让您的愿景变为现实，没有任何障碍。
                             </p>
                         </div>
                         <div style="background: #262b35; padding: 30px; border-radius: 15px; border-left: 4px solid #00CFFF;">
-                            <h3 style="color: #00CFFF; margin-bottom: 15px; font-size: 1.5em;">Why Choose AISTONE?</h3>
-                            <p style="line-height: 1.8; color: #e0e6f6;">
-                                <strong>AISTONE</strong> stands out with its commitment to privacy, quality, and accessibility. Our platform processes all content in real-time without storing user data, ensuring complete privacy while delivering professional-grade results powered by the latest AI technology.
+                            <h3 style="color: #00CFFF; margin-bottom: 15px; font-size: 1.5em;" data-i18n="whyChooseAistone">为什么选择 AISTONE？</h3>
+                            <p style="line-height: 1.8; color: #e0e6f6;" data-i18n="whyChooseAistoneDesc">
+                                <strong>AISTONE</strong> 以其对隐私、质量和可访问性的承诺而脱颖而出。我们的平台实时处理所有内容而不存储用户数据，确保完全隐私的同时，提供由最新AI技术驱动的专业级结果。
                             </p>
                         </div>
                     </div>
                     <div style="margin-top: 40px; padding: 30px; background: rgba(0,207,255,0.1); border-radius: 15px; border: 1px solid rgba(0,207,255,0.3);">
-                        <h3 style="color: #00CFFF; margin-bottom: 20px; font-size: 1.8em;">AISTONE - Your AI Content Creation Partner</h3>
-                        <p style="font-size: 1.1em; line-height: 1.8; color: #e0e6f6;">
-                            Join thousands of users who trust <strong>AISTONE</strong> for their AI content creation needs. From stunning visual art to natural voice synthesis, <strong>AISTONE</strong> is your one-stop solution for all AI-powered creative projects. Experience the future of content creation with <strong>AISTONE</strong> today.
+                        <h3 style="color: #00CFFF; margin-bottom: 20px; font-size: 1.8em;" data-i18n="aistonePartner">AISTONE - 您的AI内容创作伙伴</h3>
+                        <p style="font-size: 1.1em; line-height: 1.8; color: #e0e6f6;" data-i18n="aistonePartnerDesc">
+                            加入数千名信任 <strong>AISTONE</strong> 进行AI内容创作需求的用户。从令人惊叹的视觉艺术到自然语音合成，<strong>AISTONE</strong> 是您所有AI驱动创意项目的一站式解决方案。今天就与 <strong>AISTONE</strong> 一起体验内容创作的未来。
                         </p>
                     </div>
                 </div>
