--- a/frontend/index.html
+++ b/frontend/index.html
@@ -55,13 +55,13 @@
     
     <link rel="stylesheet" href="css/style.css">
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-X8QYXG63G3"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FYQPWQ1JTM"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-X8QYXG63G3');
+  gtag('config', 'G-FYQPWQ1JTM');
 </script>
     <script type="application/ld+json">
     {
