feat: 全面优化SEO关键词 - 增加长尾关键词和地域化关键词，提升搜索排名

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="AISTONE - Free AI Image Generator & Voice Synthesis Platform powered by Pollinations.AI technology. Features GPT Image, FLUX, DeepSeek advanced AI models. Create stunning AI art, text-to-image generation, AI voice synthesis, text-to-speech. No registration required, permanently free. Perfect for designers, content creators, marketers. High-quality AI image generation, commercial AI tools, online AI art software. 免费AI图片生成器与语音合成平台，基于Pollinations.AI技术。">
-    <meta name="keywords" content="AISTONE,AI image generator,free AI art generator,text to image AI,AI voice generator,text to speech,AI art creator,free AI tools,AI content creation,online AI art,AI image maker,Pollinations.AI,GPT Image,FLUX Image,DeepSeek,AI models,artificial intelligence,digital art,AI painting,image generation,voice synthesis,AISTONE AI,AISTONE image generator,AISTONE voice synthesis,AI创作工具,免费AI绘画,文字转图片,AI语音合成,文本转语音,人工智能绘画,智能图片生成,在线AI绘画,平面设计AI工具,插画AI生成,营销素材AI生成,教育AI工具,AI绘画模型,智能图像生成">
-    <title>AISTONE - Free AI Image Generator | Powered by Pollinations.AI | GPT Image FLUX DeepSeek | AI Art Creator | 免费AI图片生成器</title>
+    <meta name="description" content="AISTONE - Best Free AI Image Generator & Voice Synthesis Platform 2024 powered by Pollinations.AI technology. Features GPT Image, FLUX, DeepSeek advanced AI models. Create stunning AI art, text-to-image generation, AI voice synthesis, text-to-speech. Perfect for designers, content creators, marketers, ecommerce. No registration required, permanently free. High-quality AI image generation, commercial AI tools, online AI art software. Chinese AI image generator, AI绘画工具中文版, 免费AI图片生成器中国. 免费AI图片生成器与语音合成平台，基于Pollinations.AI技术。">
+    <meta name="keywords" content="AISTONE,AI image generator,free AI art generator,text to image AI,AI voice generator,text to speech,AI art creator,free AI tools,AI content creation,online AI art,AI image maker,Pollinations.AI,GPT Image,FLUX Image,DeepSeek,AI models,artificial intelligence,digital art,AI painting,image generation,voice synthesis,AISTONE AI,AISTONE image generator,AISTONE voice synthesis,best free AI image generator 2024,AI art generator for designers,text to image AI online,free AI voice synthesis tool,Chinese AI image generator,AI绘画工具中文版,免费AI图片生成器中国,AI art for marketing,AI image generator for ecommerce,AI voice for content creation,AI绘画工具,免费AI绘画,文字转图片,AI语音合成,文本转语音,人工智能绘画,智能图片生成,在线AI绘画,平面设计AI工具,插画AI生成,营销素材AI生成,教育AI工具,AI绘画模型,智能图像生成,AI图片生成器免费,AI绘画软件,AI艺术创作工具,智能图像处理,AI设计工具,AI创意生成器">
+    <title>AISTONE - Best Free AI Image Generator 2024 | Powered by Pollinations.AI | GPT Image FLUX DeepSeek | AI Art Creator | Chinese AI Image Generator | 免费AI图片生成器</title>
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://aistone.org/">
-    <meta property="og:title" content="AISTONE - Free AI Image Generator | Powered by Pollinations.AI | GPT Image FLUX DeepSeek">
-    <meta property="og:description" content="Free AI Image Generator powered by Pollinations.AI technology. Features GPT Image, FLUX, DeepSeek advanced AI models. Create stunning AI art, text-to-image generation, AI voice synthesis. No registration required, permanently free. High-quality AI image generation tools. 免费AI图片生成器，基于Pollinations.AI技术。">
+    <meta property="og:title" content="AISTONE - Best Free AI Image Generator 2024 | Powered by Pollinations.AI | GPT Image FLUX DeepSeek | Chinese AI Image Generator">
+    <meta property="og:description" content="Best Free AI Image Generator 2024 powered by Pollinations.AI technology. Features GPT Image, FLUX, DeepSeek advanced AI models. Create stunning AI art, text-to-image generation, AI voice synthesis. Perfect for designers, content creators, marketers, ecommerce. Chinese AI image generator, AI绘画工具中文版. 免费AI图片生成器，基于Pollinations.AI技术。">
     <meta property="og:image" content="https://aistone.org/assets/logo.svg">
     <meta property="og:site_name" content="AISTONE - AI Image Generator">
     <meta property="og:locale" content="en_US">
@@ -20,8 +20,8 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://aistone.org/">
-    <meta property="twitter:title" content="AISTONE - Free AI Image Generator | Powered by Pollinations.AI | GPT Image FLUX DeepSeek">
-    <meta property="twitter:description" content="Free AI Image Generator powered by Pollinations.AI technology. Features GPT Image, FLUX, DeepSeek advanced AI models. Create stunning AI art, text-to-image generation, AI voice synthesis. No registration required, permanently free. High-quality AI image generation tools. 免费AI图片生成器，基于Pollinations.AI技术。">
+    <meta property="twitter:title" content="AISTONE - Best Free AI Image Generator 2024 | Powered by Pollinations.AI | GPT Image FLUX DeepSeek | Chinese AI Image Generator">
+    <meta property="twitter:description" content="Best Free AI Image Generator 2024 powered by Pollinations.AI technology. Features GPT Image, FLUX, DeepSeek advanced AI models. Create stunning AI art, text-to-image generation, AI voice synthesis. Perfect for designers, content creators, marketers, ecommerce. Chinese AI image generator, AI绘画工具中文版. 免费AI图片生成器，基于Pollinations.AI技术。">
     <meta property="twitter:image" content="https://aistone.org/assets/logo.svg">
     <meta property="twitter:site" content="@aistone_ai">
     <meta property="twitter:creator" content="@aistone_ai">
@@ -78,7 +78,7 @@
       "@type": "WebSite",
       "name": "AISTONE - AI Image Generator",
       "url": "https://aistone.org",
-      "description": "Free AI Image Generator powered by Pollinations.AI technology. Features GPT Image, FLUX, DeepSeek advanced AI models. Create stunning AI art, text-to-image generation, AI voice synthesis. No registration required, permanently free. High-quality AI image generation tools. 免费AI图片生成器，基于Pollinations.AI技术。",
+      "description": "Best Free AI Image Generator 2024 powered by Pollinations.AI technology. Features GPT Image, FLUX, DeepSeek advanced AI models. Create stunning AI art, text-to-image generation, AI voice synthesis. Perfect for designers, content creators, marketers, ecommerce. Chinese AI image generator, AI绘画工具中文版. High-quality AI image generation tools. 免费AI图片生成器，基于Pollinations.AI技术。",
       "inLanguage": ["en", "zh-CN"],
       "potentialAction": {
         "@type": "SearchAction",
@@ -166,7 +166,7 @@
         {
           "@type": "Question",
           "name": "Who is this suitable for?",
-          "acceptedAnswer": { "@type": "Answer", "text": "Perfect for designers, content creators, marketers, students, and general users." }
+          "acceptedAnswer": { "@type": "Answer", "text": "Perfect for designers, content creators, marketers, ecommerce businesses, students, and general users. Best free AI image generator 2024 for commercial use." }
         },
         {
           "@type": "Question",
@@ -176,7 +176,7 @@
         {
           "@type": "Question",
           "name": "What AI models are supported?",
-          "acceptedAnswer": { "@type": "Answer", "text": "Powered by Pollinations.AI technology, supports GPT Image, FLUX, DeepSeek and other advanced AI models for high-quality image generation." }
+          "acceptedAnswer": { "@type": "Answer", "text": "Powered by Pollinations.AI technology, supports GPT Image, FLUX, DeepSeek and other advanced AI models for high-quality image generation. Chinese AI image generator with AI绘画工具中文版 support." }
         },
         {
           "@type": "Question",
@@ -242,6 +242,21 @@
           "@type": "Question",
           "name": "DeepSeek模型有什么特点？",
           "acceptedAnswer": { "@type": "Answer", "text": "DeepSeek模型在中文理解和图像生成方面表现优异，特别适合中文AI绘画需求。" }
+        },
+        {
+          "@type": "Question",
+          "name": "Is AISTONE the best free AI image generator 2024?",
+          "acceptedAnswer": { "@type": "Answer", "text": "Yes, AISTONE is considered one of the best free AI image generators in 2024, featuring advanced Pollinations.AI technology with GPT Image, FLUX, and DeepSeek models." }
+        },
+        {
+          "@type": "Question",
+          "name": "Can I use AISTONE for ecommerce marketing?",
+          "acceptedAnswer": { "@type": "Answer", "text": "Absolutely! AISTONE is perfect for ecommerce marketing, allowing you to create product images, promotional graphics, and marketing materials with AI art generator for designers." }
+        },
+        {
+          "@type": "Question",
+          "name": "How does AISTONE compare to other Chinese AI image generators?",
+          "acceptedAnswer": { "@type": "Answer", "text": "AISTONE stands out as a leading Chinese AI image generator with AI绘画工具中文版 features, offering free AI voice synthesis tool and text to image AI online capabilities." }
         }
       ]
     }
@@ -289,7 +304,7 @@
       "name": "AISTONE AI Image Generator",
       "applicationCategory": "MultimediaApplication",
       "operatingSystem": "Web Browser",
-      "description": "Free AI Image Generator powered by Pollinations.AI technology. Features GPT Image, FLUX, DeepSeek advanced AI models. Create stunning AI art, text-to-image generation, AI voice synthesis. No registration required, permanently free. High-quality AI image generation tools. 免费AI图片生成器，基于Pollinations.AI技术。",
+      "description": "Best Free AI Image Generator 2024 powered by Pollinations.AI technology. Features GPT Image, FLUX, DeepSeek advanced AI models. Create stunning AI art, text-to-image generation, AI voice synthesis. Perfect for designers, content creators, marketers, ecommerce. Chinese AI image generator, AI绘画工具中文版. High-quality AI image generation tools. 免费AI图片生成器，基于Pollinations.AI技术。",
       "url": "https://aistone.org",
       "author": {
         "@type": "Organization",
@@ -349,13 +364,13 @@
       "@context": "https://schema.org",
       "@type": "CreativeWork",
       "name": "AISTONE AI Image Generator",
-      "description": "Free AI Image Generator powered by Pollinations.AI technology. Features GPT Image, FLUX, DeepSeek advanced AI models. Create stunning AI art, text-to-image generation, AI voice synthesis. 免费AI图片生成器，基于Pollinations.AI技术。",
+      "description": "Best Free AI Image Generator 2024 powered by Pollinations.AI technology. Features GPT Image, FLUX, DeepSeek advanced AI models. Create stunning AI art, text-to-image generation, AI voice synthesis. Perfect for designers, content creators, marketers, ecommerce. Chinese AI image generator, AI绘画工具中文版. 免费AI图片生成器，基于Pollinations.AI技术。",
       "url": "https://aistone.org",
       "creator": {
         "@type": "Organization",
         "name": "AISTONE"
       },
-      "keywords": "AI image generator,free AI art generator,text to image AI,AI voice generator,text to speech,AI art creator,free AI tools,AI content creation,online AI art,AI image maker,Pollinations.AI,GPT Image,FLUX Image,DeepSeek,AI models,artificial intelligence,digital art,AI painting,image generation,voice synthesis,AI图片生成器,免费AI绘画,文字转图片,AI语音合成,文本转语音,人工智能绘画,免费AI工具,AI内容创作,智能图片生成,在线AI绘画,AI绘画模型,智能图像生成",
+      "keywords": "AI image generator,free AI art generator,text to image AI,AI voice generator,text to speech,AI art creator,free AI tools,AI content creation,online AI art,AI image maker,Pollinations.AI,GPT Image,FLUX Image,DeepSeek,AI models,artificial intelligence,digital art,AI painting,image generation,voice synthesis,best free AI image generator 2024,AI art generator for designers,text to image AI online,free AI voice synthesis tool,Chinese AI image generator,AI绘画工具中文版,免费AI图片生成器中国,AI art for marketing,AI image generator for ecommerce,AI voice for content creation,AI图片生成器,免费AI绘画,文字转图片,AI语音合成,文本转语音,人工智能绘画,免费AI工具,AI内容创作,智能图片生成,在线AI绘画,AI绘画模型,智能图像生成,AI图片生成器免费,AI绘画软件,AI艺术创作工具,智能图像处理,AI设计工具,AI创意生成器",
       "inLanguage": ["en", "zh-CN"]
     }
     </script>
@@ -402,7 +417,7 @@
       "@context": "https://schema.org",
       "@type": "HowTo",
       "name": "How to Use AISTONE AI Image Generator",
-      "description": "Detailed steps for generating AI images using GPT Image, FLUX, DeepSeek and other models based on Pollinations.AI technology",
+      "description": "Detailed steps for generating AI images using best free AI image generator 2024 with GPT Image, FLUX, DeepSeek and other models based on Pollinations.AI technology. Perfect for designers, content creators, marketers, ecommerce. Chinese AI image generator with AI绘画工具中文版 support.",
       "image": "https://aistone.org/assets/logo.svg",
       "totalTime": "PT2M",
       "estimatedCost": {
