修复注册登录问题 - 改进表单事件绑定、添加调试日志、创建测试页面

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -839,6 +839,10 @@
             .then(response => response.text())
             .then(html => {
                 document.getElementById('auth-modals').innerHTML = html;
+                // 重新绑定表单事件
+                if (typeof initAuthForms === 'function') {
+                    setTimeout(initAuthForms, 100);
+                }
             })
             .catch(error => {
                 console.error('加载认证界面失败:', error);
