修复登录UI和图片保存问题 - 改进UI更新逻辑、添加调试日志、修复图片管理器初始化

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1000,6 +1000,11 @@
                 // 初始化图片管理
                 if (window.hdImageManager) {
                     console.log('图片管理模块初始化完成');
+                    // 确保图片管理器正确初始化
+                    if (window.authManager && window.authManager.isLoggedIn()) {
+                        console.log('用户已登录，初始化图片管理器');
+                        window.hdImageManager.init();
+                    }
                 } else {
                     console.error('图片管理模块未加载');
                 }
