fix(auth): relax password policy (letters+digits, >=6); robust client success checks; clarify password hint

--- a/frontend/auth-modals.html
+++ b/frontend/auth-modals.html
@@ -45,7 +45,8 @@
                 </div>
                 <div class="form-group">
                     <label for="registerPassword">密码</label>
-                    <input type="password" id="registerPassword" name="password" required placeholder="请输入密码（至少6位）" autocomplete="new-password">
+                    <input type="password" id="registerPassword" name="password" required placeholder="至少6位，含大小写和数字" autocomplete="new-password">
+                    <small style="color:#6b7280">密码要求：至少6位，包含大写字母、小写字母和数字</small>
                 </div>
                 <div class="form-group">
                     <label for="registerConfirmPassword">确认密码</label>
