--- a/frontend/hd-images-ui.html
+++ b/frontend/hd-images-ui.html
@@ -1,5 +1,5 @@
 <!-- 高清图片管理界面 -->
-<div class="hd-images-section">
+<div class="hd-images-section" style="background:#111827;color:#e5e7eb;border:1px solid #273548;box-shadow:none;">
     <div class="section-header">
         <h2>📸 今日高清图片</h2>
         <div class="section-actions">
@@ -27,7 +27,7 @@
     </div>
     
     <!-- 图片网格 -->
-    <div id="daily-images" class="image-grid">
+    <div id="daily-images" class="image-grid" style="grid-template-columns:repeat(auto-fill,minmax(260px,1fr));gap:16px;">
         <div class="empty-state">
             <div class="empty-icon">📷</div>
             <h3>还没有保存的图片</h3>
@@ -147,8 +147,8 @@
 }
 
 .image-card {
-    background: #fff;
-    border: 1px solid #e5e7eb;
+    background: #0f172a;
+    border: 1px solid #273548;
     border-radius: 12px;
     overflow: hidden;
     transition: all 0.3s ease;
@@ -157,19 +157,21 @@
 
 .image-card:hover {
     transform: translateY(-2px);
-    box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 8px 25px rgba(0,0,0,0.3);
     border-color: #3b82f6;
 }
 
 .image-preview {
     position: relative;
     height: 200px;
-    background: #f9fafb;
+    background: #0b1220;
     display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
 }
+
+.image-preview img.thumb { max-width:100%; max-height:100%; object-fit:contain; display:block; }
 
 .image-placeholder {
     display: flex;
@@ -204,9 +206,9 @@
 
 .image-prompt {
     margin: 0 0 12px 0;
-    font-size: 1rem;
+    font-size: 0.95rem;
     font-weight: 600;
-    color: #1f2937;
+    color: #e5e7eb;
     line-height: 1.4;
 }
 
@@ -218,8 +220,8 @@
 }
 
 .meta-item {
-    background: #f3f4f6;
-    color: #6b7280;
+    background: #101826;
+    color: #9ca3af;
     padding: 4px 8px;
     border-radius: 4px;
     font-size: 0.75rem;
