style(ui): restyle user-info pill to match dark theme; unify stats bar background; reduce white blocks; better spacing

--- a/frontend/hd-images-ui.html
+++ b/frontend/hd-images-ui.html
@@ -10,7 +10,7 @@
     </div>
     
     <!-- 统计信息 -->
-    <div class="image-stats" id="image-stats">
+    <div class="image-stats" id="image-stats" style="background:#0f172a;border:1px solid #273548;color:#e5e7eb;">
         <div class="stat-item">
             <span class="stat-label">已生成:</span>
             <span class="stat-value">0/3</span>
@@ -27,7 +27,7 @@
     </div>
     
     <!-- 图片网格 -->
-    <div id="daily-images" class="image-grid" style="grid-template-columns:repeat(auto-fill,minmax(260px,1fr));gap:16px;">
+    <div id="daily-images" class="image-grid" style="grid-template-columns:repeat(auto-fill,minmax(260px,1fr));gap:16px; margin-top:12px;">
         <div class="empty-state">
             <div class="empty-icon">📷</div>
             <h3>还没有保存的图片</h3>
