style(ui): hide user avatar in top-right user-info to simplify header

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -894,6 +894,7 @@
         border: 1px solid #273548;
         border-radius: 999px;
     }
+    .user-avatar { display: none; }
     .user-avatar img { width: 28px; height: 28px; border-radius: 50%; object-fit: cover; }
     .user-details { display: flex; flex-direction: row; align-items: center; gap: 10px; }
     .username { font-weight: 600; color: #e5e7eb; font-size: 0.85rem; }
